karnc/tests/fixtures/negative/119_queue_bad_return/src/svc.karn
context svc

service worker from queue("q") {
  on message(message: String) -> Effect[Result[Int, String]] {
    Ok(5)
  }
}
